k8s/deployment.yaml
apiVersion: v1
kind: List
metadata:
resourceVersion: ""
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: ${NAMESPACE}
    name: ${DEPLOYMENT}
    labels:
      app: ${APP}
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: ${APP}
    template:
      metadata:
        labels:
          app: ${APP}
      spec:
        containers:
        - name: ${APP}
          image: ${IMAGE}
          ports:
          - containerPort: 8080
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APP}
    name: ${DEPLOYMENT}-service
    namespace: ${NAMESPACE}
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    #  nodePort: 30303
    selector:
      app: ${APP}
    type: ClusterIP
