k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: playground-mcp-server-ingress
  namespace: playground-mcp-server
spec:
  rules:
  - host: playground-mcp-server.whydevslovedynatrace.com
    http:
      paths:
      - backend:
          service:
            name: dynatrace-mcp-server-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - playground-mcp-server.whydevslovedynatrace.com
    secretName: playground-mcp-server-tls
